--- a/idun-market/package.json
+++ b/idun-market/package.json
@@ -11,10 +11,12 @@
   "dependencies": {
     "@supabase/supabase-js": "^2.91.0",
     "clsx": "^2.1.1",
+    "date-fns": "^4.1.0",
     "lucide-react": "^0.562.0",
     "next": "16.1.4",
     "react": "19.2.3",
     "react-dom": "19.2.3",
+    "sonner": "^2.0.7",
     "tailwind-merge": "^3.4.0",
     "zustand": "^5.0.10"
   },
